SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/SaaSOptics_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>SaaSOptics Invoice Line Item</label>
    <nameField>
        <label>SaaSOptics Invoice Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaaSOptics Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>