SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Amount__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Amount__c</fullName>
    <description>Amount of the invoice line item in SaaSOptics</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>