SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Customer_SaaSOptics_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_SaaSOptics_URL__c</fullName>
    <description>Link to the customer in SaaSOptics</description>
    <label>SaaSOptics Customer URL</label>
    <type>Url</type>
</CustomField>