SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Customer_SFDC_Account__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_SFDC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SaaSOptics Invoice Line Items</relationshipLabel>
    <relationshipName>SaaSOptics_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>