SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_ILI_Description__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_ILI_Description__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>