SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_ILI_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_ILI_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>