SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_ILI_SaaSOptics_Id__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_ILI_SaaSOptics_Id__c</fullName>
    <description>Unique ID SaaSOptics assigns to each invoice line item</description>
    <externalId>true</externalId>
    <label>SaaSOptics Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>