SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_ILI_SaaSOptics_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_ILI_SaaSOptics_URL__c</fullName>
    <description>Link directly to the invoice line item in SaaSOptics</description>
    <label>SaaSOptics URL</label>
    <type>Url</type>
</CustomField>