SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_ILI_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_ILI_Unit_Price__c</fullName>
    <description>(Local Amount/Quantity)</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>