SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Id__c</fullName>
    <label>SaaSOptics Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>