SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_URL__c</fullName>
    <label>SaaSOptics Invoice URL</label>
    <type>Url</type>
</CustomField>