SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Invoices_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoices_Salesforce_Id__c</fullName>
    <label>SaaSOptics Invoice</label>
    <referenceTo>SaaSOptics_Invoice__c</referenceTo>
    <relationshipLabel>SaaSOptics Invoice Line Items</relationshipLabel>
    <relationshipName>SaaSOptics_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>