SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/fields/SaaSOptics_Transaction_Salesforce_TxId__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Transaction_Salesforce_TxId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SaaSOptics Transaction</label>
    <referenceTo>SaaSOptics_Transaction__c</referenceTo>
    <relationshipLabel>SaaSOptics Invoice Line Items</relationshipLabel>
    <relationshipName>SaaSOptics_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>