SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SaaSOptics_Customer_SFDC_Account__c</columns>
    <columns>SaaSOptics_Invoices_Salesforce_Id__c</columns>
    <columns>SaaSOptics_Invoice_Date__c</columns>
    <columns>SaaSOptics_Item_Name__c</columns>
    <columns>SaaSOptics_Item_Code__c</columns>
    <columns>SaaSOptics_ILI_Description__c</columns>
    <columns>SaaSOptics_ILI_Quantity__c</columns>
    <columns>SaaSOptics_Amount__c</columns>
    <columns>SaaSOptics_ILI_SaaSOptics_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>